--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,29 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
+    <button ion-button ion-button-calm menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Introduction</ion-title>
+    <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h2 align="Center">What is Carazu?</h2>
+<ion-card>
+  <ion-card-content>
+    <p align="justify"><a href="http://carazu.com/">Carazu</a>  is a website that provide free automobile monitoring services for a better economic transportation expenses. Various type of people who gather here from around the world to create the community that willing to help each other. You can find which future car suits your budget and needs using the information shared by the community. Carazu also helping:
+</p>
+<p align="justify">- Avoiding money-hogging car and brand that leaching your daily expenses.</p>
+<p align="justify">- Creating the community by allowing discussion of your car needs, budget and performance with other car's owner and get the best workshop for your car nearby.</p>
+<p align="justify">- Increase experience and knowledge for the car's newbie by asking help from other Carazu's user/community.</p>
+<p align="justify">- Increase your car life expectancy by maintaining service your car when it is necessary.</p>
+<p align="justify">- Monitoring your car fuel usage for efficiency and detect your car issues earlier than ever.</p>
+<p align="justify">- Bunk the myths of car manufacturer's catalog by monitoring your car performance and usage.</p>
+  </ion-card-content>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+</ion-card>
+<button ion-button block>Sign Up Now</button>
+  <p align="center">
+      Already sign up? <a href="">Sign In</a>
   </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
