Edit Fuel Prices Page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button ion-button-calm menuToggle>
+  <ion-navbar >
+    <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Home</ion-title>
@@ -13,12 +13,12 @@
   <ion-card-content>
     <p align="justify"><a href="http://carazu.com/">Carazu</a>  is a website that provide free automobile monitoring services for a better economic transportation expenses. Various type of people who gather here from around the world to create the community that willing to help each other. You can find which future car suits your budget and needs using the information shared by the community. Carazu also helping:
 </p>
-<p align="justify">- Avoiding money-hogging car and brand that leaching your daily expenses.</p>
-<p align="justify">- Creating the community by allowing discussion of your car needs, budget and performance with other car's owner and get the best workshop for your car nearby.</p>
-<p align="justify">- Increase experience and knowledge for the car's newbie by asking help from other Carazu's user/community.</p>
-<p align="justify">- Increase your car life expectancy by maintaining service your car when it is necessary.</p>
-<p align="justify">- Monitoring your car fuel usage for efficiency and detect your car issues earlier than ever.</p>
-<p align="justify">- Bunk the myths of car manufacturer's catalog by monitoring your car performance and usage.</p>
+<p align="justify" > <ion-icon name="done-all"></ion-icon> Avoiding money-hogging car and brand that leaching your daily expenses.</p>
+<p align="justify"> <ion-icon name="done-all"></ion-icon> Creating the community by allowing discussion of your car needs, budget and performance with other car's owner and get the best workshop for your car nearby.</p>
+<p align="justify"> <ion-icon name="done-all"></ion-icon> Increase experience and knowledge for the car's newbie by asking help from other Carazu's user/community.</p>
+<p align="justify"> <ion-icon name="done-all"></ion-icon> Increase your car life expectancy by maintaining service your car when it is necessary.</p>
+<p align="justify"> <ion-icon name="done-all"></ion-icon> Monitoring your car fuel usage for efficiency and detect your car issues earlier than ever.</p>
+<p align="justify"> <ion-icon name="done-all"></ion-icon> Bunk the myths of car manufacturer's catalog by monitoring your car performance and usage.</p>
   </ion-card-content>
 
 </ion-card>
